add dongle idle timeout to 50 min.

--- a/config/velvet_v3_ui_qube.conf
+++ b/config/velvet_v3_ui_qube.conf
@@ -1,4 +1,5 @@
 CONFIG_ZMK_SLEEP=n
 CONFIG_ZMK_POINTING=y
 CONFIG_DONGLE_SCREEN_MAX_BRIGHTNESS=30
+CONFIG_DONGLE_SCREEN_IDLE_TIMEOUT_S=3000
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3000000
