--- a/build.yaml
+++ b/build.yaml
@@ -6,7 +6,7 @@ include:
     shield: velvet_v3_ui_qube qube dongle_screen
     keymap: velvet_v3_ui_ruen
     snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_DONGLE_SCREEN_MAX_BRIGHTNESS=30
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
     artifact-name: velvet_v3_ui_qube_ruen-ergohaven-zmk
   - board: ergohaven
     shield: velvet_v3_ui_right_qube
