--- a/config/velvet_v3_ui_qube.conf
+++ b/config/velvet_v3_ui_qube.conf
@@ -3,3 +3,6 @@ CONFIG_ZMK_POINTING=y
 CONFIG_DONGLE_SCREEN_MAX_BRIGHTNESS=30
 CONFIG_DONGLE_SCREEN_IDLE_TIMEOUT_S=3000
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3000000
+DONGLE_SCREEN_MAX_BRIGHTNESS=30
+DONGLE_SCREEN_IDLE_TIMEOUT_S=3000
+ZMK_IDLE_SLEEP_TIMEOUT=3000000
